<resources>
    <string name="app_name">Easy Shop</string>
    <string name="confirm">Confirm</string>
    <string name="total">Total:</string>
    <string name="add_item">Add Item</string>
    <string name="quantity">Quantity:</string>
    <string name="rm">RM</string>
    <string name="remove">Remove</string>
    <string name="price">0.00</string>
    <string name="title_activity_main_page">MainPage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cart">Start Shopping</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">Checkout</string>
    <string name="item">Items</string>
    <string name="qty">Quantity</string>
    <string name="amount">Price</string>
    <string name="add">+</string>
    <string name="Minus">-</string>
    <string name="cancel">Cancel</string>
    <string name="unit_price">"Unit Price: RM "</string>
    <string name="total_checkout">Total: RM</string>
    <string name="purchase_summary">Purchase Summary</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register"><u>Register</u></string>
    <string name="welcome">Welcome</string>
    <string name="gender">Gender:</string>
    <string name="error_username">Please enter username</string>
    <string name="error_password">Please enter password</string>
    <string name="error_password_format">Password length should be at least 8!</string>
    <string name="error_age_minimum">You should be minimum 18 years old to use our application!</string>
    <string name="error_age">Please enter your age</string>
    <string name="error_email">Please enter an email</string>
    <string name="error_email_format">Invalid email!</string>
    <string name="emptyCart">Empty Cart</string>
    <string name="shop_name">Shop Name</string>
    <string name="select_shop">Enter Shop Name:</string>
    <string name="logo_text">Easy Shop</string>
    <string name="startup_message">Easy Shop, shop as easy as you want.</string>
    <string name="top_up">Top Up</string>
    <string name="transfer_credit">Transfer Credit</string>
    <string name="log_out">Logout</string>
    <string name="or">-- OR --</string>
    <string name="enter_code">Enter Barcode</string>
    <string name="scan_item_string">Scan the Barcode on Product</string>
    <string name="next">Next</string>
    <string name="rm5">RM 5</string>
    <string name="rm10">RM 10</string>
    <string name="rm20">RM 20</string>
    <string name="rm50">RM 50</string>
    <string name="confirm_transfer">Confirm to transfer credit to this user?</string>
    <string name="transfer_amount">Amount :</string>
    <string name="available_amount">Transfer amount:</string>
    <string name="transfer_username">Username :</string>

    <string name="topUp">Top Up</string>
    <string name="topup">Top Up Main Page</string>
    <string name="bank">Bank Card</string>
    <string name="qr">QR Code</string>
    <string name="cardType">Select Your Bank Card</string>
    <string name="creditCard">Credit Card</string>
    <string name="debitCard">Debit Card</string>
    <string name="cardNo">Enter Your Card Number</string>
    <string name="ok">OK</string>
    <string name="Bankamount">Select Your Amount</string>
    <string name="rm100">RM 100</string>
    <string name="cv">CV Code</string>
    <string name="tac">Enter Your TAC Code</string>
    <string name="thank">Thank You</string>
    <string name="point">Your Point</string>
    <string name="scan">Scan</string>
    <string name="card">Card Type:</string>
    <string name="cardNumber">Card Number:</string>
    <string name="cardCV">CV Code:</string>
    <string name="topupamt">Amount:</string>
    <string name="error_cardno">Please Enter Bank Card Number</string>
    <string name="error_cv">Please Enter Your CV Number</string>
    <string name="error_tac">Please Enter Your TAC Code</string>
    <string name="error_cardnolenght">Please Enter Valid Bank Card</string>
    <string name="error_cvlenght">Please Enter Valid CV Number</string>
    <string name="receiver_username">Receiver\'s Username</string>

</resources>
