<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawerMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_AddItem"
            android:icon="@drawable/icon_cart"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_topup"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/top_up" />
        <item
            android:id="@+id/nav_transfer"
            android:icon="@drawable/ic_compare_arrows_black_24dp"
            android:title="@string/transfer_credit" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        android:title="@string/log_out"></item>

</menu>
